# vibecoding-lg-mcp-a2a

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  langgraph.json  order1.txt  order2.txt  order3.txt  order4.txt  order5.txt  order6.txt  pyproject.toml  test_docker_a2a.py
.cursor/rules/: CodeProtection.mdc  RIPER-SIGMA.mdc  cursorignore
a2a_client/: __init__.py  unified_research_agent.py
a2a_client/reports/: research_report_테디노트_20250701_143837.md  research_report_테디노트_20250701_143837_metadata.json
a2a_client/unified_research_agent/: __init__.py  a2a_tools.py  agent.py  api_server.py  models.py  tools.py
agents/: graph_builders.py
agents/a2a_servers/: __init__.py  base_agent_executor_template.py  planning_a2a_server.py  report_writing_a2a_server.py  research_a2a_server.py
agents/agent/: __init__.py  planning_agent.py  report_writing_agent.py  research_agent.py
agents/base/: __init__.py  base_agent.py  base_state.py
all-search-mcp/: __init__.py  config.yaml  run_server.py  server.py
docker/: Dockerfile.adk  Dockerfile.agent  Dockerfile.mcp  docker-compose.yml
docs/: A2A_IMPLEMENTATION_GUIDE.md  A2A_sample.md  a2a-python.txt  a2a_langgraph_tutorial_summary.md  langchain-mcp-adapters.txt  langchain-tavily.txt  langconnect.txt  langgraph-agent-development-guide.md  langgraph-redis.txt
langconnect/: Dockerfile  INSTRUCTIONS.md  pyproject.toml
scripts/: README.md  dev_langgraph.sh  docker_run.sh  quick_test.sh  run_all_agents.sh  run_google_adk.sh  start_a2a_servers.sh  test_langgraph_agents.sh
(+9 files in other folders)
